<resources>
    <string name="app_name">Delicious Clock</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">Welcome!</string>


    <!-- TITLES FOR SELECTIONS ACTIVITIES-->
    <string name="meal_selection_activity_title">Make your pick</string>
    <string name="time_selection_activity_title">Choose your time</string>
    <string name="address_selection_activity_title">Where do you live?</string>
    <string name="overview_selection_activity_title">Overview</string>
    <string name="profile_selection_activity_title">Create your profile</string>
    <string name="payment_selection_activity_title">Payment</string>

    <string name="address_form">Address</string>
    <string name="city_form">City</string>
    <string name="state_form">State</string>
    <string name="zip_form">Zip code</string>
    <string name="address_selection_continue_button">Move on!</string>
    <string name="meal_selection_continue_button">Let\'s go!</string>
    <string name="wanting_breakfast">I want my breakfast at...</string>
    <string name="breakfast_time_order_button">7:30 am</string>
    <string name="wake_up_request">... so please wake me up</string>
    <string name="time_selection_notification_button">10 minutes</string>
    <string name="earlier">earlier</string>

    <string name="action_search">Search</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_cancel_meal">Cancel meal</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_about">About</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_cancel_meal</item>
        <item>@string/nav_item_logout</item>
        <item>@string/nav_item_about</item>
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_cancel_meal">Cancel meal</string>
    <string name="title_about">About</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="title_login_facebook">Login with facebook</string>
    <string name="title_login_google">Login with google+</string>
    <string name="title_login_email">Login with email</string>
    <string name="title_register_facebook">Register with facebook</string>
    <string name="title_register_google">Register with google+</string>
    <string name="title_register_email">Register with email</string>


    <string-array name="states_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Alberta</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>Armed Forces (AE)</item>
        <item>Armed Forces Americas</item>
        <item>Armed Forces Pacific</item>
        <item>British Columbia</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District Of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Manitoba</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Brunswick</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>Newfoundland</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northwest Territories</item>
        <item>Nova Scotia</item>
        <item>Nunavut</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Ontario</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Prince Edward Island</item>
        <item>Puerto Rico</item>
        <item>Quebec</item>
        <item>Rhode Island</item>
        <item>Saskatchewan</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virgin Islands</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
        <item>Yukon Territory</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
