<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/main_background_color"
    tools:context="org.lunding.deliciousclock.register.TimeSelectionActivity"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/wanting_breakfast"
            android:layout_gravity="center_horizontal"
            android:textColor="#333333"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="15dp"
            />

        <Button
            android:id="@+id/time_selection_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast_time_order_button"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:textColor="#c4352e"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/wake_up_request"
            android:layout_gravity="center_horizontal"
            android:textColor="#333333"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="15dp"
           />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_selection_notification_button"
            android:id="@+id/time_selection_offset_button"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:textColor="#c4352e"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/earlier"
            android:layout_gravity="center_horizontal"
            android:textColor="#333333"
            android:fontFamily="sans-serif-medium"
            />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal|bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Sounds good!"
            android:id="@+id/time_selection_continue_button"
            android:background="@color/continue_button_background_color"
            android:textColor="@color/continue_button_text_color"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </FrameLayout>


</LinearLayout>
